# slowmotion_fix_bright

./: README.md  main.py  pyproject.toml  run.py  setup.py
src/slowmotion_fix_bright/: __init__.py  fixer.py  main.py
